Fix-overlap-main - footer

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ h1 {
     width: 100%;
 }
 
+main {
+    padding-bottom: 4rem;
+}
+
 .questions-list {
     list-style: none;
     padding: 0;
